crates/aranya-policy-compiler/tests/data/type_errors/struct_field_wrong_type_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: bool
  |
1 | struct Foo {a int}
  |             ----- expected because of this
2 | function g(x struct Foo) bool {
3 |     return Foo{a: false}
  |                   ^^^^^ expected `int` but found `bool`
